syntax = "proto3";
package metrics.v1;
import "google/api/annotations.proto";
message OverviewRequest { string store_id = 1; string period = 2; }
message KPI { string name = 1; double value = 2; }
message OverviewResponse { repeated KPI kpis = 1; int64 from_ts = 2; int64 to_ts = 3; }
message DashboardRequest { string seller_id = 1; string period = 2; }
message DashboardUpdate { string tile = 1; bytes payload = 2; }
service MetricsService {
  rpc GetOverview(OverviewRequest) returns (OverviewResponse) { option (google.api.http) = { get: "/api/v1/metric/overview" }; }
  rpc StreamDashboard(DashboardRequest) returns (stream DashboardUpdate);
}
